# bracket-app

./: .dockerignore  .gitignore  CLAUDE.MD  README.md  compose.yml  docker-compose.yml  makefile  package.json  pgadmin-servers.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
api/: .dockerignore  .gitignore  dockerfile  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 3644ace633ba_admin_auth.py  4fcb11b13356_refresh_token.py  84815bd8bb32_update_tournament_model.py  a4c81bfadd9f_players_tournaments.py  a674ee91cb07_matches.py  d770096ed8a6_create_users_table.py  fc4339a493a0_.py
api/app/: admin.py  config.py  database.py  schemas.py
api/app/auth/: models.py  router.py  schemas.py  security.py  service.py
api/app/match/: models.py  router.py  schemas.py  service.py
api/app/player/: models.py  router.py  schemas.py  service.py
api/app/team/: models.py
api/app/tournament/: models.py  router.py  schemas.py  service.py
django_api/: .dockerignore  README.md  api.Dockerfile  entrypoint.sh  pyproject.toml
django_api/api/: models.py
django_api/api/migrations/: 0001_initial.py  0002_player_email_match_set_statistics_tournament_and_more.py
django_api/apps/authentication/: api.py  commands.py  models.py  schemas.py
django_api/apps/authentication/migrations/: 0001_initial.py
django_api/apps/match/: admin.py  api.py  factory.py  models.py  schemas.py
django_api/apps/match/migrations/: 0001_initial.py  0002_initial.py
django_api/apps/player/: api.py  factory.py  models.py
django_api/apps/player/migrations/: 0001_initial.py  0002_initial.py
django_api/apps/tournament/: admin.py  api.py  factory.py  models.py  schemas.py
django_api/apps/tournament/migrations/: 0002_initial.py
django_api/core/: settings.py  urls.py
django_api/core/utility/: MyRouter.py
(+103 files in other folders)
